// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <Character /> And has a name in data Then should match the snapshot 1`] = `
<div>
  <div
    class="character rs-panel rs-panel-default rs-panel-shaded"
  >
    <div
      class="rs-panel-body rs-panel-body-fill"
    >
      <div
        class="rs-list"
      >
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  mass
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  10
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  gender
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  Male
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <h6
              class="title"
            >
              joker
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given <Character /> And has an image Then should match the snapshot 1`] = `
<div>
  <div
    class="character rs-panel rs-panel-default rs-panel-shaded"
  >
    <div
      class="rs-panel-body rs-panel-body-fill"
    >
      <img
        class="character-image"
        src="testing.png"
      />
      <div
        class="rs-list"
      >
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  mass
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  10
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  gender
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  Male
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given <Character /> When initializes Then should match the snapshot 1`] = `
<div>
  <div
    class="character rs-panel rs-panel-default rs-panel-shaded"
  >
    <div
      class="rs-panel-body rs-panel-body-fill"
    >
      <div
        class="rs-list"
      >
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  mass
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  10
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="rs-list-item character-entry rs-list-item-md"
          manager="[object Object]"
        >
          <div
            class="rs-list-item-content"
          >
            <div
              class="rs-flex-box-grid character-info rs-flex-box-grid-top rs-flex-box-grid-space-between"
            >
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-type"
                >
                  gender
                </span>
              </div>
              <div
                class="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <span
                  class="character-info-value"
                >
                  Male
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
